--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -25,12 +25,16 @@
 
 
 	<ItemGroup>
+		<Compile Remove="Mappers\**" />
 		<Compile Remove="Views\Components\**" />
 		<Compile Remove="Views\SubPages\**" />
+		<EmbeddedResource Remove="Mappers\**" />
 		<EmbeddedResource Remove="Views\Components\**" />
 		<EmbeddedResource Remove="Views\SubPages\**" />
+		<None Remove="Mappers\**" />
 		<None Remove="Views\Components\**" />
 		<None Remove="Views\SubPages\**" />
+		<Page Remove="Mappers\**" />
 		<Page Remove="Views\Components\**" />
 		<Page Remove="Views\SubPages\**" />
 	</ItemGroup>
@@ -160,9 +164,11 @@
 		<None Remove="Views\CharactersPage.xaml" />
 		<None Remove="Views\Controls\EditableTextBlock.xaml" />
 		<None Remove="Views\Controls\FolderSelector.xaml" />
+		<None Remove="Views\Controls\LinkButton.xaml" />
 		<None Remove="Views\Controls\ModListOverview.xaml" />
 		<None Remove="Views\Controls\SelectCharacterFromGrid.xaml" />
 		<None Remove="Views\DebugPage.xaml" />
+		<None Remove="Views\ErrorWindow.xaml" />
 		<None Remove="Views\NotificationsPage.xaml" />
 	</ItemGroup>
 
@@ -507,6 +513,12 @@
 		<None Update="Assets\Images\Elements\Element_Pyro.svg">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<Page Update="Views\Controls\LinkButton.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
+		<Page Update="Views\ErrorWindow.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
 		<Page Update="Styles\FontTypes.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</Page>
@@ -660,5 +672,9 @@
 
 	<ItemGroup>
 	  <PRIResource Remove="Strings\en-us\Resources.resw" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PRIResource Remove="Mappers\**" />
 	</ItemGroup>
 </Project>
