--- a/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
+++ b/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
@@ -14,6 +14,13 @@
     <None Remove="Genshin\**" />
     <None Remove="Models\**" />
   </ItemGroup>
+	
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>GenshinGenerator</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
