--- a/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
+++ b/src/GIMI-ModManager.Core/GIMI-ModManager.Core.csproj
@@ -26,8 +26,11 @@
     <PackageReference Include="ErrorOr" Version="1.2.1" />
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="OneOf" Version="3.0.263" />
+    <PackageReference Include="Polly" Version="8.1.0" />
+    <PackageReference Include="Polly.RateLimiting" Version="8.1.0" />
     <PackageReference Include="Serilog" Version="3.0.1" />
     <PackageReference Include="SharpCompress" Version="0.33.0" />
   </ItemGroup>
