--- a/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
+++ b/src/GIMI-ModManager.WinUI/GIMI-ModManager.WinUI.csproj
@@ -39,6 +39,7 @@
 		<Page Remove="Views\SubPages\**" />
 	</ItemGroup>
 	<ItemGroup>
+		<Content Remove="Assets\easterEgg.mp3" />
 		<Content Remove="Assets\Games\Genshin\characters.json" />
 		<Content Remove="Assets\Games\Genshin\custom\npc.json" />
 		<Content Remove="Assets\Games\Genshin\elements.json" />
@@ -165,20 +166,22 @@
 		<Content Remove="Assets\Games\Honkai\Images\Elements\Pyro.svg" />
 		<Content Remove="Assets\Games\Honkai\regions.json" />
 		<Content Remove="Assets\Games\Honkai\weaponClasses.json" />
+		<Content Remove="Assets\ModPanePlaceholder.webp" />
 	</ItemGroup>
 	<ItemGroup>
+		<None Remove="Assets\easterEgg.mp3" />
 		<None Remove="Assets\Fonts\zh-cn2.ttf" />
 		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Others.png" />
 		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Others_Unused.webp" />
 		<None Remove="Assets\Games\Genshin\Images\Characters\Character_Paimon_Thumb.png" />
 		<None Remove="Assets\Games\Genshin\Images\Start_Game.png" />
 		<None Remove="Assets\Games\Honkai\Images\Start_Game.png" />
-		<None Remove="Assets\ModPanePlaceholder.webp" />
 		<None Remove="Styles\FontTypes.xaml" />
 		<None Remove="Views\CharacterDetailsPage.xaml" />
 		<None Remove="Views\CharacterManagerPage.xaml" />
 		<None Remove="Views\CharacterManager\EditCharacterPage.xaml" />
 		<None Remove="Views\CharactersPage.xaml" />
+		<None Remove="Views\Controls\BoolBorder.xaml" />
 		<None Remove="Views\Controls\CustomImage.xaml" />
 		<None Remove="Views\Controls\EditableTextBlock.xaml" />
 		<None Remove="Views\Controls\FolderSelector.xaml" />
@@ -186,7 +189,9 @@
 		<None Remove="Views\Controls\ModListOverview.xaml" />
 		<None Remove="Views\Controls\SelectCharacterFromGrid.xaml" />
 		<None Remove="Views\DebugPage.xaml" />
+		<None Remove="Views\EasterEggPage.xaml" />
 		<None Remove="Views\ErrorWindow.xaml" />
+		<None Remove="Views\ModUpdateAvailableWindow.xaml" />
 		<None Remove="Views\NotificationsPage.xaml" />
 	</ItemGroup>
 
@@ -195,7 +200,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="CommunityToolkit.WinUI.UI.Animations" Version="7.1.2" />
 		<PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
 		<PackageReference Include="CommunityToolkit.WinUI.UI.Controls.Layout" Version="7.1.2" />
@@ -203,9 +208,16 @@
 		<PackageReference Include="FluentValidation" Version="11.7.1" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="7.0.13" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231008000" />
 		<PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
 		<PackageReference Include="OneOf" Version="3.0.263" />
+		<PackageReference Include="Polly" Version="8.1.0" />
+		<PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
+		<PackageReference Include="Polly.Extensions" Version="8.1.0" />
+		<PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
+		<PackageReference Include="Polly.RateLimiting" Version="8.1.0" />
 		<PackageReference Include="Serilog" Version="3.0.1" />
 		<PackageReference Include="Serilog.Expressions" Version="3.4.1" />
 		<PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
@@ -214,8 +226,8 @@
 		<PackageReference Include="Serilog.Sinks.EventLog" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="WindowsDisplayAPI" Version="1.3.0.13" />
-		<PackageReference Include="WinUI3Localizer" Version="2.0.1" />
-		<PackageReference Include="WinUIEx" Version="2.3.2" />
+		<PackageReference Include="WinUI3Localizer" Version="2.1.0" />
+		<PackageReference Include="WinUIEx" Version="2.3.3" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -603,6 +615,18 @@
 		<None Update="Assets\Games\Honkai\weaponClasses.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\ModPanePlaceholder.webp">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<Page Update="Views\EasterEggPage.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
+		<Page Update="Views\Controls\BoolBorder.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
+		<Page Update="Views\ModUpdateAvailableWindow.xaml">
+		  <Generator>MSBuild:Compile</Generator>
+		</Page>
 		<Page Update="Views\Controls\CustomImage.xaml">
 		  <Generator>MSBuild:Compile</Generator>
 		</Page>
@@ -685,9 +709,6 @@
 		<Content Update="Assets\Games\Honkai\Images\Start_Game.png">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Update="Assets\ModPanePlaceholder.webp">
-		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</Content>
 		<Content Update="Assets\WindowIcon.ico">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
@@ -724,5 +745,9 @@
 
 	<ItemGroup>
 	  <PRIResource Remove="Mappers\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Assets\easterEgg.mp3" />
 	</ItemGroup>
 </Project>
